# pyvac_test

./: .flake8  .gitignore  README.md  install.sh  main.py  readme_for_release.md  release.bat  release.sh  requirements.txt  run.bat  run.sh  test.py
gui/: main_window.ui  test_settings_window.ui
release/: readme.md
scripts/: install.bat  release.bat  release.sh
src/: config.py  dialog_windows.py  image_widget.py  main_window.py  test_widgets.py  tests.py  utils.py
vac248ip/: .hg_archival.txt  __init__.py  __main__.py  requirements.txt  test_parameters.py  utils.py  vac248ip.py  vac248ip_base.py  vac248ip_virtual.py  version.py
vac248ip/pyvac248ipnative/: CMakeLists.txt  pyvac248ipnative.c  pyvac248ipnative.h
